--- a/src/Cmdty.Storage.Excel/Cmdty.Storage.Excel.csproj
+++ b/src/Cmdty.Storage.Excel/Cmdty.Storage.Excel.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
     <SignAssembly>false</SignAssembly>
+    <RunExcelDnaPack>true</RunExcelDnaPack>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,17 +11,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="ExcelDna.Integration">
-      <HintPath>..\..\lib\ExcelDna\ExcelDna.Integration.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
 
   <ItemGroup>
+	<PackageReference Include="ExcelDna.AddIn" Version="1.6.0" />
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <None Update="Cmdty.Storage.Excel-AddIn.dna">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -34,6 +33,6 @@
     <Exec Command="$(ProjectDir)..\..\lib\ExcelDna\ExcelDnaPack.exe $(TargetDir)Cmdty.Storage.Excel-AddIn64.dna /Y /O $(TargetDir)Cmdty.Storage-x64.xll" WorkingDirectory="$(TargetDir)" />
     <Copy SourceFiles="$(TargetDir)Cmdty.Storage-x86.xll" DestinationFolder="..\..\artifacts" OverwriteReadOnlyFiles="true" />
     <Copy SourceFiles="$(TargetDir)Cmdty.Storage-x64.xll" DestinationFolder="..\..\artifacts" OverwriteReadOnlyFiles="true" />
-  </Target>
+  </Target>-->
 
 </Project>
