--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     inputs:
       packageType: 'runtime'
       useGlobalJson: false
-      version: 6.0.x
+      version: 6.0.0
     
   - task: UsePythonVersion@0
     inputs:
