--- a/samples/csharp/Cmdty.Storage.Samples.Intrinsic/Cmdty.Storage.Samples.Intrinsic.csproj
+++ b/samples/csharp/Cmdty.Storage.Samples.Intrinsic/Cmdty.Storage.Samples.Intrinsic.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cmdty.Storage" Version="0.1.0-beta2" />
+    <PackageReference Include="Cmdty.Storage" Version="0.1.0" />
   </ItemGroup>
 
 </Project>
