.NET standard binaries copied to python packages.

--- a/src/Cmdty.Storage/Cmdty.Storage.csproj
+++ b/src/Cmdty.Storage/Cmdty.Storage.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+	<NetStandardTargetFramework>netstandard2.0</NetStandardTargetFramework>
+    <TargetFrameworks>$(NetStandardTargetFramework)</TargetFrameworks>
     <FullNetVersion>net461</FullNetVersion>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">$(TargetFrameworks);$(FullNetVersion)</TargetFrameworks>
     <PackageId>Cmdty.Storage</PackageId>
@@ -29,26 +30,27 @@
     </AssemblyAttribute>
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(TargetFramework)' == '$(FullNetVersion)'">
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(TargetFramework)' == '$(NetStandardTargetFramework)'">
+	<Exec Command="dotnet publish -f $(NetStandardTargetFramework) --no-build -c $(Configuration) --nologo" />
     <PropertyGroup>
       <PythonLibDir>..\Cmdty.Storage.Python\cmdty_storage\lib</PythonLibDir>
     </PropertyGroup>
     <ItemGroup>
-      <ManagedFilesToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(FullNetVersion)\*.dll" />
-      <ManagedFilesToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(FullNetVersion)\*.pdb" />
+      <ManagedFilesToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(NetStandardTargetFramework)\publish\*.dll" />
+      <ManagedFilesToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(NetStandardTargetFramework)\publish\*.pdb" />
     </ItemGroup>
     <MakeDir Directories="$(PythonLibDir)" />
     <Copy SourceFiles="@(ManagedFilesToCopyForPython)" DestinationFolder="..\Cmdty.Storage.Python\cmdty_storage\lib" OverwriteReadOnlyFiles="true" />
     <WriteLinesToFile File="..\Cmdty.Storage.Python\cmdty_storage\__version__.py" Lines="__version__ = '$(PythonVersion)'" Overwrite="true" WriteOnlyWhenDifferent="true" />
 
     <ItemGroup>
-      <NativeX86FilesToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(FullNetVersion)\x86\*.dll" />
+      <NativeX86FilesToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(NetStandardTargetFramework)\x86\*.dll" />
     </ItemGroup>
     <MakeDir Directories="$(PythonLibDir)\x86" />
     <Copy SourceFiles="@(NativeX86FilesToCopyForPython)" DestinationFolder="..\Cmdty.Storage.Python\cmdty_storage\lib\x86" OverwriteReadOnlyFiles="true" />
 
     <ItemGroup>
-      <NativeX64FileToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(FullNetVersion)\x64\*.dll" />
+      <NativeX64FileToCopyForPython Include="$(ProjectDir)bin\$(ConfigurationName)\$(NetStandardTargetFramework)\x64\*.dll" />
     </ItemGroup>
     <MakeDir Directories="$(PythonLibDir)\x64" />
     <Copy SourceFiles="@(NativeX64FileToCopyForPython)" DestinationFolder="..\Cmdty.Storage.Python\cmdty_storage\lib\x64" OverwriteReadOnlyFiles="true" />
