--- a/samples/csharp/Cmdty.Storage.Samples.Trinomial/Cmdty.Storage.Samples.Trinomial.csproj
+++ b/samples/csharp/Cmdty.Storage.Samples.Trinomial/Cmdty.Storage.Samples.Trinomial.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cmdty.Storage" Version="0.1.0-beta2" />
+    <PackageReference Include="Cmdty.Storage" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
