Refactoring and start work on COM wrapped class for managing execution.

--- a/src/Cmdty.Storage.Excel/Cmdty.Storage.Excel.csproj
+++ b/src/Cmdty.Storage.Excel/Cmdty.Storage.Excel.csproj
@@ -11,7 +11,8 @@
 	    <ExcelAddInName>Cmdty.Storage</ExcelAddInName>
 		<ExcelDnaPack32BitXllName>Cmdty.Storage-x86</ExcelDnaPack32BitXllName>
 		<ExcelDnaPack64BitXllName>Cmdty.Storage-x64</ExcelDnaPack64BitXllName>
-    </PropertyGroup>
+		<ExcelAddInComServer>true</ExcelAddInComServer>
+	</PropertyGroup>
 
 	<ItemGroup>
     <ProjectReference Include="..\Cmdty.Storage\Cmdty.Storage.csproj" />
